RESOLVED FIXED 240950
Fix typo in SVGAttributeAnimator::isAnimatedStylePropertyAniamtor
https://bugs.webkit.org/show_bug.cgi?id=240950
Summary Fix typo in SVGAttributeAnimator::isAnimatedStylePropertyAniamtor
Frédéric Wang (:fredw)
Reported 2022-05-26 04:19:25 PDT
It should be called SVGAttributeAnimator::isAnimatedStylePropertyAnimator I'm keeping this open as a good first bug for a new contributor.
Attachments
Patch (3.84 KB, patch)
2022-07-18 09:54 PDT, serakeri
no flags
Radar WebKit Bug Importer
Comment 1 2022-06-02 04:20:13 PDT
serakeri
Comment 2 2022-07-18 09:54:40 PDT
serakeri
Comment 3 2022-07-18 14:19:30 PDT
Caitlin Potter (:caitp)
Comment 4 2022-07-18 14:23:31 PDT
Serakeri is taking this
EWS
Comment 5 2022-07-18 19:12:39 PDT
Committed 252587@main (e87c1bd54692): <https://commits.webkit.org/252587@main> Reviewed commits have been landed. Closing PR #2523 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.