Fix typo in SVGAttributeAnimator https://bugs.webkit.org/show_bug.cgi?id=240950

Reviewed by Said Abou-Hallawa.

* Source/WebCore/svg/properties/SVGAnimatedPropertyAnimator.h:
* Source/WebCore/svg/properties/SVGAnimatedPropertyAnimatorImpl.h:
* Source/WebCore/svg/properties/SVGAttributeAnimator.cpp:
(WebCore::SVGAttributeAnimator::isAnimatedStylePropertyAnimator const):
(WebCore::SVGAttributeAnimator::isAnimatedStylePropertyAniamtor const): Deleted.
* Source/WebCore/svg/properties/SVGAttributeAnimator.h:

Canonical link: https://commits.webkit.org/252587@main